--- a/Components/layout/main-header.module.css
+++ b/Components/layout/main-header.module.css
@@ -47,7 +47,7 @@
   }
 
   .text {
-	font-size: 1rem; /* Adjust the font size as needed */
+	font-size: 1.5rem; 
 	font-weight: bold;
 	letter-spacing: 1px;
 	color: black;
