--- a/pages/favorites/FavItems.module.css
+++ b/pages/favorites/FavItems.module.css
@@ -3,7 +3,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: 100vh; /* Adjust the height as needed */
+	height: 100vh;
 }
 
 .title {
@@ -20,7 +20,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-    font-family: "Helvetica Neue", sans-serif;
+	font-family: "Helvetica Neue", sans-serif;
 	font-size: 3rem;
 	color: #333;
 	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
